--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>SodaCorsair's Blog</title>
     <link rel="stylesheet" href="/atom-one-light.css" />
     <script src="https://cdn.bootcss.com/highlight.js/9.15.6/highlight.min.js"></script>
 </head>
